实现exec模块相关功能
